--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,13 @@
 			        <a class="nav-link" [routerLink]="['/login']">Login</a>
 			      </li>
 			      <li class="nav-item">
+			        <a class="nav-link" [routerLink]="['/home']">Home</a>
+			      </li>
+			      <li class="nav-item">
 			        <a class="nav-link" [routerLink]="['/reserva']">Reservas</a>
+			      </li>
+			      <li class="nav-item">
+			        <a class="nav-link" [routerLink]="['/room']">Habitaciones</a>
 			      </li>
 			    </ul>
 			  </div>
