--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,18 +4,58 @@
 			<h1 class="display-3">Próximos pasajeros</h1>
 			<hr class="my-2">
 		</div>		
-	</div>	
-	<div class="card mb-2" *ngFor="let card of cards">
-		<h3 class="card-header">Featured</h3>
+	</div>
+	<div class="card mb-2" *ngFor="let reserva of reservadosDb" [ngClass]="checked(reserva)">
+		<h5 class="card-header text-center">{{reserva.pasajero + ' (' + reserva.noPersonas +' personas)'}}</h5>
 		<div class="card-block">
-		<h4 class="card-title">Card title</h4>
-		<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-		<p class="card-text">
-		  Some quick example text to build on the card title
-		  and make up the bulk of the card's content.
-		</p>
-		<a href="#" class="card-link">Card link</a>
-		<a href="#" class="card-link">Another link</a>
+			<div class="row">
+				<div class="col-md-6">
+					<h5 class="card-title">
+						<small>Desde</small>&nbsp;
+						{{reserva.feDesde | date : 'dd/MMM/yyyy'}}
+						<small>Hasta</small>&nbsp;
+						{{reserva.feHasta | date : 'dd/MMM/yyyy'}}
+					</h5>					
+				</div>			
+				<div class="col-md-6">
+					<strong>Llega en:</strong>&nbsp;{{reserva.aerolinea}}					
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<p class="card-text">
+					  <strong>Habitaciones:</strong>&nbsp;{{reserva.habitaciones}}
+					</p>					
+				</div>			
+				<div class="col-md-6">
+					<p class="card-text">
+					  <strong>Adicionales:</strong>&nbsp;{{reserva.adicionales}}
+					</p>					
+				</div>
+			</div>			
+			<!-- <div class="row">	
+				<div class="col-md-12">
+					<p class="text-center">
+					  <strong>Contacto</strong>
+					</p>						
+				</div>			  
+			</div> -->
+			<div class="row">
+				<div class="col-md-6">
+					<p class="card-text">
+					  <strong>Correo:</strong>&nbsp;{{reserva.correo}}
+					</p>					
+				</div>			
+				<div class="col-md-6">
+					<p class="card-text">
+					  <strong>Número de contacto:</strong>&nbsp;{{reserva.noContacto}}
+					</p>					
+				</div>
+			</div>
+		<!-- <p class="card-text">
+		  <strong>Correo:</strong>&nbsp;{{reserva.correo}}
+		  <strong>Número de contacto:</strong>&nbsp;{{reserva.noContacto}}
+		</p> -->
 		</div>
-	</div>	
+	</div>
 </div>
