--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,14 +1,9 @@
-.card-columns {
-  @include media-breakpoint-only(lg) {
-    column-count: 2;
-  }
-  @include media-breakpoint-only(xl) {
-    column-count: 2;
-  }
-  @include media-breakpoint-only(md) {
-    column-count: 2;
-  }
-  @include media-breakpoint-only(sm) {
-    column-count: 2;
-  }
+/*.cardhome {
+
+  transition: opacity 0.3s;
 }
+
+.cardhome :hover{
+
+  opacity: 0.5;    
+}*/
