--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <section class="navClass">
-	<div class="container">
+	<div class="container exbrand">
 		<header class="encabezado">
 			<!-- <nav class="navbar navbar-light fixed-top navaux">
 				<a class="navbar-brand" href="#">Chaskiy Qurpa</a>
@@ -8,7 +8,9 @@
 			  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar0" aria-controls="navbar0" aria-expanded="false" aria-label="Toggle navigation">
 			    <span class="navbar-toggler-icon"></span>
 			  </button>
-			  <a class="navbar-brand" href="#">Chaskiy Qurpa</a>
+			  <a class="navbar-brand" href="#">
+			  	<img src="/assets/images/chaskiy-brand.png" width="30" height="30" alt="">
+			  </a>
 
 			  <div class="collapse navbar-collapse" id="navbar0">
 			    <ul class="navbar-nav mr-auto mt-2 mt-md-0">
