--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,14 +1,38 @@
-
 <section class="bienvenidos">
 	<div class="container">	
-		<div class="texto-bienvenido text-center">
+		<div id="carIndicators" class="carousel slide" data-ride="carousel">
+		  <ol class="carousel-indicators">
+		    <li data-target="#carIndicators" data-slide-to="0" class="active"></li>
+		    <li data-target="#carIndicators" data-slide-to="1"></li>
+		    <li data-target="#carIndicators" data-slide-to="2"></li>
+		  </ol>
+		  <div class="carousel-inner" role="listbox">
+		    <div class="carousel-item active">
+		      <img class="d-block img-fluid" src="/assets/images/chaskiy-carrousel0.png" alt="First slide">
+		    </div>
+		    <div class="carousel-item">
+		      <img class="d-block img-fluid" src="/assets/images/chaskiy-carrousel0.png" alt="Second slide">
+		    </div>
+		    <div class="carousel-item">
+		      <img class="d-block img-fluid" src="/assets/images/chaskiy-carrousel0.png" alt="Third slide">
+		    </div>
+		  </div>
+		  <!-- <a class="carousel-control-prev" href="#carIndicators" role="button" data-slide="prev">
+		    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		    <span class="sr-only">Anterior</span>
+		  </a>
+		  <a class="carousel-control-next" href="#carIndicators" role="button" data-slide="next">
+		    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+		    <span class="sr-only">Siguiente</span>
+		  </a> -->
+		</div>
+		<!-- <div class="texto-bienvenido text-center">
 			<p class="h5">Bienvenidos a nuestro estudio</p>
 			<h1 class="display-4 mb-5">Encantados de conocerte</h1>
 			<a href="#" class="btn btn-primary btn-lg">Ponte en contacto</a>
-		</div>
+		</div> -->
 	</div>
 </section>
-
 <section class="quienes-somos py-3 text-center">
 	<div class="containter">
 		<img src="/assets/images//nosotros.svg" width="181" alt="nosotros" class="img-fluid mx-auto mb-3">
