--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -2,6 +2,11 @@ html{
 	font-size:15px;
 }
 
+.modal-header {  
+    background: rgba(0, 34, 51, 0.88);
+    color: white;
+}
+
 .imageContainer{
         position: absolute;
         width: 100px; /*the image width*/
@@ -119,4 +124,44 @@ html{
 
 .exbrand .navbar-brand > img {
   padding: 0px 0px;
+}
+
+.bg-primary {
+ background-color: #1f3d4c !important;
+}
+
+.bg-circle
+{
+  display: inline-block;
+  width: 60px;
+  height: 60px;
+  padding: 14px 4px;
+  color: #ececec;
+  text-align: center;
+  border-radius: 50%;
+}
+
+.bg-circle-outline
+{
+  width: 50px;
+  height: 50px;
+  color:smoke;
+  padding: 8px 2px;
+  border: 2px solid;
+  border-color: smoke;
+  border-radius: 50%;
+}
+
+.bg-circle a, a:hover, .media a:focus
+{
+  text-decoration: none !important;
+  outline: none;
+  color: #ececec;
+}
+
+.bg-circle-outline a, a:hover, .media a:focus
+{
+  text-decoration: none !important;
+  outline: none;
+  color: #ececec;
 }
