--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,41 +1,11 @@
-.bg-primary {
- background-color: #1f3d4c !important;
+.wrapper{
+  margin-top: 4.3rem;
+  margin-left: .5rem;
 }
 
-.bg-circle
-{
-  display: inline-block;
-  width: 60px;
-  height: 60px;
-  padding: 14px 4px;
-  color: #ececec;
-  text-align: center;
-  border-radius: 50%;
-}
-
-.bg-circle-outline
-{
-  width: 50px;
-  height: 50px;
-  color:smoke;
-  padding: 8px 2px;
-  border: 2px solid;
-  border-color: smoke;
-  border-radius: 50%;
-}
-
-.bg-circle a, a:hover, .media a:focus
-{
-  text-decoration: none !important;
-  outline: none;
-  color: #ececec;
-}
-
-.bg-circle-outline a, a:hover, .media a:focus
-{
-  text-decoration: none !important;
-  outline: none;
-  color: #ececec;
+.dropdown-menu {
+    left: 10px;
+    border-radius: 0rem;
 }
 /*dasdada*/
 body {
@@ -154,6 +124,7 @@ body {
     #page-content-wrapper {
         padding: 20px;
         position: relative;
+        /*margin-top: 3.3rem;*/
     }
 
     #wrapper.toggled #page-content-wrapper {
