--- a/src/app/modal-message/modal-message.component.html
+++ b/src/app/modal-message/modal-message.component.html
@@ -1,3 +1,18 @@
-<p>
-  modal-message works!
-</p>
+<div *ngIf="message" class="modal fade" id="messModal" style="top: 80px;">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">{{message.tipo}}</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>{{message.text}}</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Aceptar</button>
+      </div>
+    </div>
+  </div>
+</div>
