--- a/src/app/reserva/reserva.component.html
+++ b/src/app/reserva/reserva.component.html
@@ -64,23 +64,8 @@
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Reserva</h5>        
-        <div *ngIf="accion!='I'" class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-          <div class="btn-group mr-2" role="group" aria-label="First group">
-            <button *ngIf="ocultaBtnModi('Ci')" type="button" class="btn btn-outline-primary" (click)="check('Ci')">
-              <i class="fa fa-check-square-o" aria-hidden="true"></i>
-            </button>
-            <button *ngIf="ocultaBtnModi('Co')" type="button" class="btn btn-outline-primary" (click)="check('Co')">
-              <i class="fa fa-sign-out" aria-hidden="true"></i>
-            </button>
-            <button *ngIf="ocultaBtnModi('U')" type="button" class="btn btn-outline-danger" (click)="setModi()">
-              <i class="fa fa-pencil" aria-hidden="true"></i>
-            </button>
-            <button *ngIf="ocultaBtnModi('D')" type="button" class="btn btn-outline-danger" (click)="setCancel()" data-toggle="modal" data-target="#confirmModal">
-              <i class="fa fa-calendar-minus-o" aria-hidden="true"></i>
-            </button>
-          </div>
-        </div>
+        <h4 class="modal-title">Reserva</h4>
+        <font>{{'Estado: ' + getEstado()}}</font>
       </div>
       <form name="form" class="col-md-12" (ngSubmit)="f.form.valid && guardar(f)" #f="ngForm" novalidate>
         <div *ngIf="esModi">
@@ -147,13 +132,14 @@
                       <select2 [data]="adicionales" [options]="optionsAdi" [value]="valueAd" (valueChanged)="changedAd($event)" name="adicional" width="100%"></select2>
                   </div>                
                   <div class="form-group">
-                      <label for="habitaciones">Habitaciones</label>     
+                      <label for="habitaciones"><strong>Habitaciones</strong>
+                      </label>     
                       <div class="alert alert-info alert-dismissible fade show" role="alert" *ngFor="let room of model.habitaciones">
                         <button *ngIf="auxValor.idHabitacion != room.idHabitacion" type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="delReserve(room)">
                           <span aria-hidden="true">&times;</span>
                         </button>                                         
                         <div *ngIf="auxValor.idHabitacion == room.idHabitacion" class="input-group">
-                        <input type="text" class="form-control" name="habitaciones" placeholder="{{'Tarifa para ' + room.habitacion}}" [(ngModel)]="room.tarifa" #tarifa="ngModel" />
+                        <input type="text" class="form-control" name="habitaciones" placeholder="{{'Tarifa para ' + room.habitacion}}" [(ngModel)]="room.tarifa" myCurrency="true" #tarifa="ngModel" />
                           <span class="input-group-btn">
                             <button type="button" class="btn btn-primary" (click)="goModiVal()">
                               <i class="fa fa-check" aria-hidden="true"></i>
@@ -256,7 +242,8 @@
                     </div>
                   </div>              
                   <div class="form-group">
-                    <label for="habitaciones">Habitaciones</label>     
+                    <label for="habitaciones"><strong>Habitaciones</strong>
+                    </label>     
                     <div class="alert alert-info alert-dismissible fade show" role="alert" *ngFor="let room of model.habitaciones">                        
                       <h6 class="alert-heading">{{' ' + room.habitacion}}&nbsp;
                         <small>
@@ -268,7 +255,6 @@
                           <strong>= {{room.tarifa * nightDiff(room.feDesde, room.feHasta) | currency:'USD':true}}</strong>
                         </small>
                       </h6>
-                      <!-- <p><strong>{{room.feDesde | date : 'dd/MMM/yyyy'}}{{' - '}}{{room.feHasta | date : 'dd/MMM/yyyy'}}</strong></p>   -->
                       <strong>{{room.feDesde | date : 'dd/MMM/yyyy'}}{{' - '}}{{room.feHasta | date : 'dd/MMM/yyyy'}}</strong>             
                     </div>
                   </div> 
@@ -280,22 +266,28 @@
                     <div class="p-2">                                         
                       <h4>Total</h4> 
                     </div>
-                  </div>  
+                  </div>
                 </div> 
               </div> 
           </div>
-          <div class="modal-footer">    
-            <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="quitRes()">Cerrar</button>        
-            <!-- <div class="row">
-              <div class="col-md-2"><strong>Creado</strong>                
-              </div>              
-              <div class="col-md-4">{{model.usCreacion + ' - ' + model.feCreacion}}</div>
+          <div class="modal-footer">        
+            <div *ngIf="accion!='I'" class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+              <div class="btn-group mr-2" role="group" aria-label="First group">
+                <button *ngIf="ocultaBtnModi('Ci')" type="button" class="btn btn-outline-danger" (click)="check('Ci')">
+                  <i class="fa fa-check-square-o" aria-hidden="true"></i>
+                </button>
+                <button *ngIf="ocultaBtnModi('Co')" type="button" class="btn btn-outline-warnig" (click)="check('Co')">
+                  <i class="fa fa-external-link-square" aria-hidden="true"></i>
+                </button>
+                <button *ngIf="ocultaBtnModi('U')" type="button" class="btn btn-outline-danger" (click)="setModi()">
+                  <i class="fa fa-pencil" aria-hidden="true"></i>
+                </button>
+                <button *ngIf="ocultaBtnModi('D')" type="button" class="btn btn-outline-danger" (click)="setCancel()" data-toggle="modal" data-target="#confirmModal">
+                  <i class="fa fa-calendar-minus-o" aria-hidden="true"></i>
+                </button>
+              </div>
             </div>
-            <div class="row">
-              <div class="col-md-2"><strong>Modificado</strong>                
-              </div>              
-              <div class="col-md-4">{{model.usModificacion + ' - ' + model.feModificacion}}</div>
-            </div> -->
+            <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="quitRes()">Cerrar</button>
           </div>            
         </div>
       </form>
