--- a/src/app/room/room.component.html
+++ b/src/app/room/room.component.html
@@ -11,6 +11,9 @@
 		  <div class="card-block">		  	
 		    <h2>Registros 
 		    	<small>Habitaciones</small>
+		    	<!-- <a class="bg-circle bg-danger pull-right" (click)="setNuevo()" data-toggle="modal" data-target="#habitacionModal">
+		    		<i class="fa fa-plus" aria-hidden="true"></i>
+		    	</a> -->
 			    <button type="button" class="btn btn-danger pull-right" (click)="setNuevo()" data-toggle="modal" data-target="#habitacionModal">
 			      <i class="fa fa-plus" aria-hidden="true"></i>
 			    </button>		    
@@ -71,14 +74,14 @@
 	            <div *ngIf="f.submitted && !noHabitacion.valid" class="help-block">El número de la habitación es requerido</div>
 	        </div>
 	        <div class="form-group" [ngClass]="{ 'has-danger': f.submitted && !habitacion.valid }">
-	            <label for="tarifa">Tarifa</label>
-	            <input type="text" class="form-control col-md-4" name="tarifa" [(ngModel)]="model.tarifa" #habitacion="ngModel" required />
-	            <div *ngIf="f.submitted && !habitacion.valid" class="help-block">La tarifa por noche es requerida</div>
-	        </div>
-	        <div class="form-group" [ngClass]="{ 'has-danger': f.submitted && !habitacion.valid }">
 	            <label for="habitacion">Nombre</label>
 	            <input type="text" class="form-control col-md-8" name="habitacion" [(ngModel)]="model.habitacion" #habitacion="ngModel" required />
 	            <div *ngIf="f.submitted && !habitacion.valid" class="help-block">El nombre de la habitación es requerido</div>
+	        </div>
+	        <div class="form-group" [ngClass]="{ 'has-danger': f.submitted && !habitacion.valid }">
+	            <label for="tarifa">Tarifa</label>
+	            <input type="text" class="form-control col-md-4" name="tarifa" [(ngModel)]="model.tarifa" #habitacion="ngModel" myCurrency="true" required />
+	            <div *ngIf="f.submitted && !habitacion.valid" class="help-block">La tarifa por noche es requerida</div>
 	        </div>
 	        <!-- <div class="form-group">
 	            <button [disabled]="readOnly" class="btn btn-primary pull-right">
